Nav item whitespace issue, nowrap

--- a/styles/_navigation.scss
+++ b/styles/_navigation.scss
@@ -44,6 +44,7 @@ nav {
       justify-content: center;
       align-items: center;
       color: inherit;
+      white-space: nowrap;
 
       @include lg-mobile {
         display: none;
